@@ -904,3 +904,11 @@ class TestUrlDispatcher(unittest.TestCase):
         ret = self.loop.run_until_complete(
             resource.resolve('POST', '/st/abc.py'))
         self.assertEqual((None, {'GET'}), ret)
+
+    def test_check_allowed_method_for_found_resource(self):
+        handler = self.make_handler()
+        resource = self.router.add_resource('/')
+        resource.add_route('GET', handler)
+        ret = self.loop.run_until_complete(resource.resolve('GET', '/'))
+        self.assertIsNotNone(ret[0])
+        self.assertEqual({'GET'}, ret[1])
